# whisperstt

./: .gitignore  Cargo.toml  README.md  shell.nix
.direnv/: nix-profile-23.11-80v3x99d9cl7h9fb  nix-profile-23.11-80v3x99d9cl7h9fb.rc
src/: main.rs
