[package]
name = "whisperstt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
cpal = { version = "0.15.2", features = [] }
hound = "3.5.1"
lame = "0.1.3"
reqwest = { version = "0.11.24", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
